# epicure-mcp

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy.yml  publish-zot.yaml
data/: ingredient_list.csv  ingredient_tags.csv
scripts/: azure_setup.sh  build_data.py  smoke_test_remote.py  verify_data.py
src/epicure_mcp/: __init__.py  analytics.py  config.py  data_loader.py  geometry.py  matcher.py  pairings.py  ratelimit.py  server.py
src/epicure_mcp/tools/: __init__.py  closest_mode.py  compare_on_axis.py  cultural_profile.py  find_pairings.py  flavour_correlations.py  ingredient_on_factor.py  list_factors.py  list_targets.py  morph.py  morph_types.py  neighbors.py  pairing_score.py  pareto_navigate.py  where_on_atlas.py
tests/: conftest.py  test_analytics.py  test_matcher.py  test_pairings.py  test_server.py  test_tools.py
