[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "epicure-mcp"
version = "0.1.0"
description = "Public read-only Epicure MCP server"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "KAIKAKU-AI"}]
dependencies = [
  "mcp[cli]>=1.4.0",
  "starlette>=0.37.2",
  "uvicorn>=0.30.1",
  "numpy>=1.26.4",
  "pandas>=2.2.2",
  "orjson>=3.10.6",
  "pydantic>=2.8.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2",
  "pytest-cov>=5.0.0",
  "anyio>=4.4.0",
  "asgi-lifespan>=2.1.0",
  "ruff>=0.5.6",
  "mypy>=1.11.1",
  "types-requests>=2.32.0.20240712",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
ignore_missing_imports = true
